# LanguageLearningSubtitles

./: .gitignore  LICENSE  README.md  ankideck.py  pyproject.toml  test.py  transcribe.py
.github/actions/poetry-setup/: action.yml
.github/workflows/: python-package.yml
llsubtitles/: __main__.py  ankicards.py  ankideck.py  chinese_dictionary.py  transcribe.py
llsubtitles/dictionaries/: chinese.py
llsubtitles/translators/: translator.py
subtitles/: ankideck.py  chinese_dictionary.py  transcribe.py
subtitles/templates/: pinyin-english.json
tests/: test_chinese_dictionary.py  test_subtitle_parser.py
